# message-sender

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  smtp_servers.json.sample
src/: main.py
src/api/v1/: base.py  send_email.py
src/core/: config.py  logger.py
src/db/: redis.py
src/schemas/: send_email.py
src/services/: email_sender.py  tasks.py
tests/: conftest.py  send_email_status_test.py  send_email_test.py  smtp_servers_test.json
