[tool.poetry]
name = "message-sender"
version = "0.1.0"
description = ""
authors = ["Alex Fofanov <alex.fofanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic-settings = "^2.5.2"
orjson = "^3.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
